add img partenaire

--- a/app/Resources/AppBundle/views/App/about.html.twig
+++ b/app/Resources/AppBundle/views/App/about.html.twig
@@ -64,16 +64,24 @@
 
                     <ul class="small-block-grid-2 medium-block-grid-4 text-center">
                         <li>
-                            <a href="#"  target="_blank">Eclairage 3000</a>
+                            <a href="#"  target="_blank" title="Eclairage 3000">
+                                <img class="" src="{{ asset('bundles/app/images/E3000.png') }}" />
+                            </a>
                         </li>
                         <li>
-                            <a href="#"  target="_blank">Prestocab France</a>
+                            <a href="#"  target="_blank" title="Prestocab France">
+                                <img class="" src="{{ asset('bundles/app/images/Prestocab.png') }}" />
+                            </a>
                         </li>
                         <li>
-                            <a href="http://www.plastisem.fr" target="_blank">Plastisem</a>
+                            <a href="http://www.plastisem.fr" target="_blank" title="Plastisem">
+                                <img class="" src="{{ asset('bundles/app/images/Plastisem.png') }}" />
+                            </a>
                         </li>
                         <li>
-                            <a href="http://moulageplastiquefrancais.com"  target="_blank">MPF</a>
+                            <a href="http://moulageplastiquefrancais.com" title="MPF"  target="_blank">
+                                <img class="" src="{{ asset('bundles/app/images/MPF.png') }}" />
+                            </a>
                         </li>
                     </ul>
 
