--- a/app/Resources/public/scss/_settings.scss
+++ b/app/Resources/public/scss/_settings.scss
@@ -31,6 +31,19 @@ $lightgrey: #F2F2F2;
     background: $darkgrey !important;
 }
 
+.colorblue{
+  color: $blue !important;
+}
+.colorlightblue{
+  color: $lightblue !important;
+}
+.colordarkstyle{
+  color: $darkblue !important;
+}
+.colordarkgrey{
+  color: $darkgrey !important;
+}
+
 
 //
 
