--- a/app/Resources/public/scss/app.scss
+++ b/app/Resources/public/scss/app.scss
@@ -540,3 +540,9 @@ div.owl-wrapper-outer {
 div.panel.contact{
     min-height: 500px;
 }
+
+/******************************* galery ******************************/
+
+h2.title-galery{
+    font-size: 1.4rem;
+}
