--- a/app/Resources/AppBundle/views/App/galery.html.twig
+++ b/app/Resources/AppBundle/views/App/galery.html.twig
@@ -19,20 +19,20 @@
         <div class="small-10 small-centered columns">
             <div id="owl-demo" class="owl-carousel owl-theme">
                 <div class="item">
-                    <img class="itemhome" src="{{ asset('bundles/app/images/Hunocky-vert.png') }}"/>
-                    <h2 class="text-center title-itemhomebox nomargin">
+                    <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Hunocky-vert.png') }}"/>
+                    <h2 class="text-center title-galery colorlightblue">
                         Hunocky vert
                     </h2>
                 </div>
                 <div class="item">
-                    <img class="itemhome" src="{{ asset('bundles/app/images/La-Defense-candelabre-4temps.png') }}"/>
-                    <h2 class="text-center title-itemhomebox nomargin">
+                    <img class="itemhome image-galery" src="{{ asset('bundles/app/images/La-Defense-candelabre-4temps.png') }}"/>
+                    <h2 class="text-center title-galery colorlightblue">
                         La defense candelabre 4temps
                     </h2>
                 </div>
                 <div class="item">
-                    <img class="itemhome" src="{{ asset('bundles/app/images/MAJE-Caisson.png') }}"/>
-                    <h2 class="text-center title-itemhomebox nomargin">
+                    <img class="itemhome image-galery" src="{{ asset('bundles/app/images/MAJE-Caisson.png') }}"/>
+                    <h2 class="text-center title-galery colorlightblue">
                         MAJE caisson
                     </h2>
                 </div>
