Création classe h3.Delphine

--- a/app/Resources/public/scss/app.scss
+++ b/app/Resources/public/scss/app.scss
@@ -373,6 +373,12 @@ div.home{
     margin:0;
     padding: 0.5rem 0;
 }
+h3.Delphine{
+      background: none repeat scroll 0 0 #222222;
+    color: #555555;
+    font-size: 1.6875rem;
+    text-align: center;
+}
 
 /********************* app **************************************************/
 
