--- a/app/Resources/AppBundle/views/App/about.html.twig
+++ b/app/Resources/AppBundle/views/App/about.html.twig
@@ -67,7 +67,7 @@
                             <a href="#"  target="_blank" title="Eclairage 3000">
                                 <img class="" src="{{ asset('bundles/app/images/E3000.png') }}" />
                             </a>
-                            <h3></h3>
+                            <h3>{{ 'views.app.about.Delphine'|trans }}</h3>
                         </li>
                         <li>
                             <a href="#"  target="_blank" title="Prestocab France">
