--- a/app/Resources/AppBundle/views/App/galery.html.twig
+++ b/app/Resources/AppBundle/views/App/galery.html.twig
@@ -36,6 +36,37 @@
                         MAJE - Caisson
                     </h2>
                 </div>
+				<div class="item">
+                    <img class="itemhome image-galery" src="{{ asset('bundles/app/images/AIER-EASY.png') }}"/>
+                    <h2 class="text-center title-galery colordarkgrey">
+                        AIER-EASY
+                    </h2>
+				</div>
+				<div class="item">
+                    <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Colonne-RGB.png') }}"/>
+                    <h2 class="text-center title-galery colordarkgrey">
+                        Colonne-RGB
+                    </h2>
+				<div class="item">
+                    <img class="itemhome image-galery" src="{{ asset('bundles/app/images/IR000071.png') }}"/>
+                    <h2 class="text-center title-galery colordarkgrey">
+                        IR000071
+                    </h2>
+				<div class="item">
+                    <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Lustre-3PAR56.png') }}"/>
+                    <h2 class="text-center title-galery colordarkgrey">
+                        Lustre-3PAR56
+                    </h2>
+				<div class="item">
+                    <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Oeuf.png') }}"/>
+                    <h2 class="text-center title-galery colordarkgrey">
+                        Oeuf
+                    </h2>
+				<div class="item">
+                    <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Tequila-Tezon.png') }}"/>
+                    <h2 class="text-center title-galery colordarkgrey">
+                        Tequila-Tezon
+                    </h2>
             </div>
         </div>
     </div>
