Ajout balises non fermées

--- a/app/Resources/AppBundle/views/App/galery.html.twig
+++ b/app/Resources/AppBundle/views/App/galery.html.twig
@@ -47,26 +47,31 @@
                     <h2 class="text-center title-galery colordarkgrey">
                         Colonne-RGB
                     </h2>
+					</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/IR000071.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
                         IR000071
                     </h2>
+					</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Lustre-3PAR56.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
                         Lustre-3PAR56
                     </h2>
+					</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Oeuf.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
                         Oeuf
                     </h2>
+					</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Tequila-Tezon.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
                         Tequila-Tezon
                     </h2>
+					</div>
             </div>
         </div>
     </div>
