--- a/app/Resources/AppBundle/views/App/galery.html.twig
+++ b/app/Resources/AppBundle/views/App/galery.html.twig
@@ -19,57 +19,57 @@
         <div class="small-10 small-centered columns">
             <div id="owl-demo" class="owl-carousel owl-theme">
                 <div class="item">
-                    <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Hunocky-vert.png') }}"/>
+                    <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Hunocky.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        Hunocky
+						{{ 'views.app.galery.Unoky'|trans }}
                     </h2>
                 </div>
                 <div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/La-Defense-candelabre-4temps.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        La Défense - Candélabre 4 temps
+                        {{ 'views.app.galery.La Défense - Candélabre 4 temps'|trans }}
                     </h2>
                 </div>
                 <div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/MAJE-Caisson.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        MAJE - Caisson
+                        {{ 'views.app.galery.MAJE - Caisson'|trans }}
                     </h2>
                 </div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/AIER-EASY.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        AIER-EASY
+                        {{ 'views.app.galery.AIER-EASY'|trans }}
                     </h2>
 				</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Colonne-RGB.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        Colonne-RGB
+                        {{ 'views.app.galery.Colonne-RGB'|trans }}
                     </h2>
 					</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/IR000071.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        IR000071
+                        {{ 'views.app.galery.IR000071'|trans }}
                     </h2>
 					</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Lustre-3PAR56.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        Lustre-3PAR56
+                        {{ 'views.app.galery.Lustre-3PAR56'|trans }}
                     </h2>
 					</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Oeuf.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        Oeuf
+                        {{ 'views.app.galery.Oeuf'|trans }}
                     </h2>
 					</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Tequila-Tezon.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        Tequila-Tezon
+                        {{ 'views.app.galery.Tequila-Tezon'|trans }}
                     </h2>
 					</div>
             </div>
