Suppression tab et changements keys

--- a/app/Resources/AppBundle/views/App/galery.html.twig
+++ b/app/Resources/AppBundle/views/App/galery.html.twig
@@ -21,55 +21,55 @@
                 <div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Hunocky.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-						{{ 'views.app.galery.Unoky'|trans }}
+						{{ 'views.app.galery.item1'|trans }}
                     </h2>
                 </div>
                 <div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/La-Defense-candelabre-4temps.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        {{ 'views.app.galery.La Défense - Candélabre 4 temps'|trans }}
+                        {{ 'views.app.galery.item2'|trans }}
                     </h2>
                 </div>
                 <div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/MAJE-Caisson.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        {{ 'views.app.galery.MAJE - Caisson'|trans }}
+                        {{ 'views.app.galery.item3'|trans }}
                     </h2>
                 </div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/AIER-EASY.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        {{ 'views.app.galery.AIER-EASY'|trans }}
+                        {{ 'views.app.galery.item4'|trans }}
                     </h2>
 				</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Colonne-RGB.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        {{ 'views.app.galery.Colonne-RGB'|trans }}
+                        {{ 'views.app.galery.item5'|trans }}
                     </h2>
 					</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/IR000071.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        {{ 'views.app.galery.IR000071'|trans }}
+                        {{ 'views.app.galery.item6'|trans }}
                     </h2>
 					</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Lustre-3PAR56.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        {{ 'views.app.galery.Lustre-3PAR56'|trans }}
+                        {{ 'views.app.galery.item7'|trans }}
                     </h2>
 					</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Oeuf.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        {{ 'views.app.galery.Oeuf'|trans }}
+                        {{ 'views.app.galery.item8'|trans }}
                     </h2>
 					</div>
 				<div class="item">
                     <img class="itemhome image-galery" src="{{ asset('bundles/app/images/Tequila-Tezon.png') }}"/>
                     <h2 class="text-center title-galery colordarkgrey">
-                        {{ 'views.app.galery.Tequila-Tezon'|trans }}
+                        {{ 'views.app.galery.item9'|trans }}
                     </h2>
 					</div>
             </div>
