--- a/app/Resources/public/scss/app.scss
+++ b/app/Resources/public/scss/app.scss
@@ -1,4 +1,6 @@
+@import "_functions";
 @import "normalize";
+@import "_feelsettings";
 @import "_settings";
 @import "_foundation_mod";
 @import "_icoonmoon";
